crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_alternation_shows_open_location.txt
[
    (a)
    (b)
==== diagnostics ====
error: missing closing `]`
 --> query.ptk:1:1
  |
1 |   [
  |   ^ alternation started here
  |  _|
  | |
2 | |     (a)
3 | |     (b)
  | |_______^
  |
help: add `]` to close the alternation
